--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,13 @@
 plugins {
     id "com.github.ben-manes.versions" version "0.36.0"
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-//    id 'org.kordamp.gradle.jdeprscan' version '0.9.0'
-//    id 'org.kordamp.gradle.jdeps' version '0.12.0'
     id 'org.springframework.boot' version '2.4.1'
     id 'java'
 }
 
 group = 'com.github.jinahya'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '1.8'
 
 configurations {
     compileOnly {
@@ -23,10 +21,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.jinahya:datagokr-api-b090041-lrsrcldinfoservice-client-spring:0.0.3'
+    implementation 'com.github.jinahya:datagokr-api-b090041-lrsrcldinfoservice-client-spring:0.3.2-SNAPSHOT'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'io.projectreactor:reactor-test'
-    implementation 'jakarta.activation:jakarta.activation-api:1.2.2' // split-package
+    implementation 'javax.cache:cache-api'
+    runtimeOnly 'org.ehcache:ehcache'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
@@ -45,19 +44,6 @@ processResources {
     expand(project.properties)
 }
 
-java {
-    modularity.inferModulePath = true
-}
-
-// https://docs.gradle.org/current/userguide/java_testing.html#sec:java_testing_modular
-//def moduleName = "com.github.jinahya.datagokr.api.b090041_.lrsrcldinfoservice.proxy.spring"
-//def patchArgs = ["--patch-module", "$moduleName=${tasks.compileJava.destinationDirectory.asFile.get().path}"]
-
-//tasks.compileTestJava {
-//    options.compilerArgs += patchArgs
-//}
-
 test {
     useJUnitPlatform()
-//    jvmArgs += patchArgs
 }
