--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.github.ben-manes.versions" version "0.36.0"
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-    id 'org.springframework.boot' version '2.4.1'
+    id 'io.spring.dependency-management' version '1.0.1.RELEASE'
+    id 'org.springframework.boot' version '2.4.2'
     id 'java'
 }
 
@@ -18,18 +18,26 @@ configurations {
 repositories {
     mavenLocal()
     mavenCentral()
+//    jcenter() // springfox
+}
+
+ext {
+    springdocVersion = '1.5.2'
 }
 
 dependencies {
-    implementation 'com.github.jinahya:datagokr-api-b090041-lrsrcldinfoservice-client-spring:0.3.3'
+    implementation 'com.github.jinahya:datagokr-api-b090041-lrsrcldinfoservice-client-spring:0.3.4'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'io.projectreactor:reactor-test'
+//    implementation "io.springfox:springfox-bean-validators:3.0.0"
+//    implementation "io.springfox:springfox-boot-starter:3.0.0"
     implementation 'javax.cache:cache-api'
     runtimeOnly 'org.ehcache:ehcache'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
+    implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
