--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.github.jinahya'
-version = '0.5.0'
+version = '0.5.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 configurations {
